fix: refactor get All event API by adding more property as filter: category, isOnline, isFeatured, isPublish
