# src/routes/api.ts
@@ -120,6 +120,36 @@ router.post('/events', [authMiddleware, aclMiddleware([ROLES.ADMIN])] ,eventCont
 router.get('/events', eventController.findAll
     /**
     #swagger.tags = ['Events']
+    #swagger.parameters['limit'] = {
+        in: 'query',
+        type: number,
+        default: 10
+    }
+    #swagger.parameters['page'] = {
+        in: 'query',
+        type: number,
+        default: 1
+    }
+    #swagger.parameters['search'] = {
+        in: 'query',
+        type: string,
+    }
+    #swagger.parameters['category'] = {
+        in: 'query',
+        type: string,
+    }
+    #swagger.parameters['isOnline'] = {
+        in: 'query',
+        type: boolean,
+    }
+    #swagger.parameters['isPublish'] = {
+        in: 'query',
+        type: boolean,
+    }
+    #swagger.parameters['isFeatured'] = {
+        in: 'query',
+        type: boolean,
+    }
      */
 )
 router.get('/events/:id', eventController.findOne
